# student_card_ocr

./: .cursorrules  .env.example  .gitignore  ARCHITECTURE.md  README.md  TODO.md  collect_raw_data.py  main.py  pyproject.toml  test_yomitoku_run.py
core/: config.py  deps.py  rate_limit.py  upload.py
docs/: PRIVACY.md  SETUP.md  sample_image_sources.md
models/: __init__.py  schemas.py
ocr/: base.py  yomitoku_impl.py
ocr/postprocess/: __init__.py  normalizer.py  pipeline.py  router.py  types.py
ocr/postprocess/extractors/: __init__.py  base.py  driver_license_jp.py  student_card_jp.py
qr/: verifier.py
services/: response_builder.py  student_card_service.py
tests/: conftest.py  test_api_ops.py  test_api_response.py  test_verifier.py
tests/fixtures/anonymized/: README.md  driver_license_anonymized.raw.json  expected.json  test_student_card_01.raw.json  test_student_card_02.raw.json
tests/postprocess/: test_postprocess.py
tests/test_images/: README.md
web/: app.js  index.html  style.css
