[project]
name = "student-card-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pyzbar>=0.1.9",
    "uvicorn>=0.38.0",
    "yomitoku>=0.13.0",
]
